Upgrade to Java (and upgrade dependencies)
This commit also:
- removes unused imports
- replace some calls to deprecated APIs

# Conflicts:
#	.travis.yml
#	pom.xml